refactor(onboarding): renamed verify information

--- a/translations/v2/en/pages/signup/onboarding/verify-information.json
+++ b/translations/v2/en/pages/signup/onboarding/verify-information.json
@@ -1,5 +1,5 @@
 {
-  "title": "Verification information",
+  "title": "Verify information",
   "subtitle": "To create your account, we need some basic information:",
   "form": {
     "githubAccount": {
