Revert "Update issue card (#2609)"
This reverts commit 432f69f043a457670fb51cd28a0df3911a52213b.

--- a/translations/v2/en/pages/hackathons-details.json
+++ b/translations/v2/en/pages/hackathons-details.json
@@ -63,7 +63,7 @@
     "card": {
       "apply": "Apply",
       "viewApplication": "View application",
-      "assigned": "Assigned",
+      "viewOnGithub": "View on GitHub",
       "createdBy": "By",
       "applicantsCount": {
         "zero": "applicants",
