refactor(onboarding): completed modal images

--- a/translations/v2/en/pages/signup/onboarding/onboarding-completed.json
+++ b/translations/v2/en/pages/signup/onboarding/onboarding-completed.json
@@ -7,9 +7,9 @@
       "content": "Make your project public to attract contributors and collaborators.",
       "cta": "Submit a project"
     },
-    "exploreEcosystems": {
-      "title": "Explore ecosystems",
-      "content": "Discover other projects and communities within the ecosystem to gain insights and make connections."
+    "manageContributors": {
+      "title": "Manage & attract contributors",
+      "content": "Attracting New Contributors and Managing Applications on OnlyDust."
     },
     "applyGrant": {
       "title": "Apply for a grant",
