--- a/translations/v2/en/features/notifications-panel.json
+++ b/translations/v2/en/features/notifications-panel.json
@@ -1,4 +1,8 @@
 {
   "title": "Notifications",
-  "readAll": "Mark all as read"
+  "readAll": "Mark all as read",
+  "empty": {
+    "title": "No Notifications",
+    "content": "You have no notifications at the moment."
+  }
 }
