--- a/translations/v2/en/pages/signup/onboarding/onboarding-project-recommendations.json
+++ b/translations/v2/en/pages/signup/onboarding/onboarding-project-recommendations.json
@@ -17,7 +17,7 @@
     "content": "To tailor your experience on OnlyDust, please select the main reasons why you want to join our community.",
     "choices": {
       "skill": {
-        "title": "Learn & Devellop Skills",
+        "title": "Learn & Develop Skills",
         "content": "Gain access to projects designed to enhance your skills and knowledge through continuous learning opportunities."
       },
       "challenge": {
