--- a/translations/v2/en/pages/settings-profile.json
+++ b/translations/v2/en/pages/settings-profile.json
@@ -10,7 +10,7 @@
     }
   },
   "contactEmail": {
-    "title": "Contact Contact Email",
+    "title": "Contact Email",
     "subtitle": "This email address will be used to receive notifications. Ensure it is up-to-date to stay informed."
   },
   "notificationSettings": {
