--- a/translations/v2/en/pages/settings-payout.json
+++ b/translations/v2/en/pages/settings-payout.json
@@ -20,6 +20,10 @@
       "label": "Aptos wallet address",
       "placeholder": "Aptos wallet adress"
     },
+    "stellar": {
+      "label": "Stellar wallet address",
+      "placeholder": "Stellar wallet adress"
+    },
     "sepa": {
       "iban": {
         "label": "Account number",
