--- a/translations/v2/en/pages/settings-billing/settings-billing-payout.json
+++ b/translations/v2/en/pages/settings-billing/settings-billing-payout.json
@@ -17,6 +17,10 @@
       "label": "Aptos wallet address",
       "placeholder": "Aptos wallet address"
     },
+    "stellar": {
+      "label": "Stellar wallet address",
+      "placeholder": "Stellar wallet adress"
+    },
     "sepa": {
       "iban": {
         "label": "Account number",
