--- a/translations/v2/en/features/project-side-overview.json
+++ b/translations/v2/en/features/project-side-overview.json
@@ -8,10 +8,10 @@
   "sponsors": "Sponsors",
   "projectLeads": "Project leads",
   "contributors": "Contributors",
-  "countSponsors": {
-    "zero": "0 sponsors",
-    "one": "1 sponsor",
-    "many": "__count__ sponsors"
+  "countPrograms": {
+    "zero": "0 programs",
+    "one": "1 program",
+    "many": "__count__ programs"
   },
   "languages": "Languages",
   "issues": "Issues",
