--- a/translations/v2/en/features/project-side-overview.json
+++ b/translations/v2/en/features/project-side-overview.json
@@ -5,7 +5,7 @@
     "many": "__count__ links"
   },
   "links": "Links",
-  "sponsors": "Sponsors",
+  "programs": "Programs",
   "projectLeads": "Project leads",
   "contributors": "Contributors",
   "countPrograms": {
