delete sponsorp project button

--- a/translations/v2/en/pages/project-details/project-header.json
+++ b/translations/v2/en/pages/project-details/project-header.json
@@ -2,7 +2,6 @@
   "buttons": {
     "edit": "Edit project",
     "reward": "Reward contributor",
-    "budget": "Add budget",
-    "sponsor": "Sponsor project"
+    "budget": "Add budget"
   }
 }
