--- a/translations/v2/en/pages/project-overview.json
+++ b/translations/v2/en/pages/project-overview.json
@@ -29,7 +29,7 @@
     "contributors": "Contributors",
     "ecosystems": "Ecosystems",
     "categories": "Categories",
-    "sponsors": "Sponsors",
+    "programs": "Programs",
     "languages": "Languages",
     "moreInfo": "More info",
     "links": {
