--- a/translations/v2/en/commons/enums.json
+++ b/translations/v2/en/commons/enums.json
@@ -14,7 +14,7 @@
       "NAME": "Project name",
       "REPO_COUNT": "Number of repositories",
       "CONTRIBUTOR_COUNT": "Number of contributors",
-      "RANK": "Trending projects"
+      "RANK": "Recommendations"
     }
   },
   "me": {
