refactor(menu): manager space translation

--- a/translations/v2/en/features/menu.json
+++ b/translations/v2/en/features/menu.json
@@ -7,7 +7,7 @@
   "rewards": "Rewards",
   "hackathons": "Hackathons",
   "publicProfile": "Public profile",
-  "program": "Manage your funds",
+  "program": "Go to manager space",
   "feedback": "Feedback",
   "legalNotice": "Legal notice",
   "logout": "Log out",
