--- a/translations/v2/en/pages/project-details/project-application-details.json
+++ b/translations/v2/en/pages/project-details/project-application-details.json
@@ -26,7 +26,8 @@
     },
     "motivations": {
       "motivation": "How the contributor background can be leveraged",
-      "approach": "How the contributor will approach the problem"
+      "approach": "How the contributor will approach the problem",
+      "comment": "Comment"
     },
     "buttons": {
       "assign": "Assign contributor",
