fix(hackathon): display on mobile

--- a/translations/v2/en/features/hackathon-card.json
+++ b/translations/v2/en/features/hackathon-card.json
@@ -7,5 +7,9 @@
   },
   "button": "Explore",
   "applicants": "Applicants",
-  "issuesOpen": "Issues open"
+  "issuesOpen": "Issues open",
+  "tags": {
+    "applicants": "__subscriberCount__ applicants",
+    "issues": "__openIssueCount__/__issueCount__ issues"
+  }
 }
