Add near support on frontend

--- a/translations/v2/en/commons/commons.json
+++ b/translations/v2/en/commons/commons.json
@@ -31,6 +31,9 @@
         "stellar": {
           "invalid": "Invalid Stellar wallet address"
         },
+        "near": {
+          "invalid": "Invalid Near wallet address"
+        },
         "sepa": {
           "iban": {
             "required": "IBAN is required when BIC is provided"
