feat: add CONTRIBUTOR_REWIND notification settings and update related translations
- Introduced CONTRIBUTOR_REWIND category in notification settings.
- Updated NotificationSettings component to include toggle for CONTRIBUTOR_REWIND.
- Enhanced form utility functions to handle CONTRIBUTOR_REWIND notifications.
- Modified ContributorRewindReady notification model to reflect updated naming.
- Added corresponding translations for CONTRIBUTOR_REWIND notifications.

--- a/translations/v2/en/pages/settings-profile.json
+++ b/translations/v2/en/pages/settings-profile.json
@@ -55,6 +55,10 @@
         "reward": {
           "label": "Reward",
           "content": "Receive updates on all stages of your rewards, from receipt to payment."
+        },
+        "rewind": {
+          "label": "Rewind",
+          "content": "Be alerted as soon as your rewind is available."
         }
       },
       "maintainer": {
