feat: add Stellar wallet support in payout summary

--- a/translations/v2/en/pages/stacks-request-payments.json
+++ b/translations/v2/en/pages/stacks-request-payments.json
@@ -58,6 +58,7 @@
       "optimism": "Optimism wallet address",
       "etherum": "Etherum wallet address",
       "starknet": "Starknet wallet address",
+      "stellar": "Stellar wallet address",
       "aptos": "Aptos wallet address",
       "sepaAccount": "Account number",
       "sepaBic": "BIC / SWIFT"
